tests/snapshots/parser__parser.snap
---
source: tests/parser.rs
expression: hir
input_file: tests/parser/hello.lang
---
Ok:
  funs:
    main:
      return_ty: ~
      body:
        - kind: Return
          expr:
            kind: Num
            value: 0
