tests/snapshots/parser__parser@10_missing_main.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/10_missing_main.lang
---
Err: MissingMainFunction
