tests/snapshots/parser__parser@12_break_in_if_not_loop.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/12_break_in_if_not_loop.lang
---
Err:
  BreakOutsideLoop:
    pos:
      line: 3
      column: 9
