tests/snapshots/parser__parser@13_duplicate_function.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/13_duplicate_function.lang
---
Err:
  DuplicateFunction:
    name: helper
    pos:
      line: 5
      column: 1
