tests/snapshots/parser__parser@14_unexpected_eof.lang.snap
---
source: tests/parser.rs
expression: result
input_file: tests/parser/14_unexpected_eof.lang
---
Err:
  UnexpectedEOF:
    expected: statement
